sql/sql_table.cc
@@ -14506,7 +14506,11 @@ bool fk_handle_rename(THD *thd, TABLE_LIST *old_table, const LEX_CSTRING *new_db
   if (tables.empty())
     return false;
 
-  if (thd->mdl_context.upgrade_shared_lock(
+  DBUG_ASSERT(old_table->mdl_request.ticket ||
+              thd->locked_tables_mode == LTM_LOCK_TABLES);
+
+  if (old_table->mdl_request.ticket &&
+      thd->mdl_context.upgrade_shared_lock(
              old_table->mdl_request.ticket, MDL_EXCLUSIVE,
              thd->variables.lock_wait_timeout))
     return true;
